quazip for Qt5 is installed to quazip5/ since rev 254

See http://sourceforge.net/p/quazip/code/254/

BUG: 348553